# Turbulence-Solutions-Safe-Agent-Workspace

./: .gitattributes  .gitignore  Makefile  README.md  SECURITY_AUDIT_REPORT.md  WORKPACKAGES.md  WorkspacePhilosophy-Compact.md  WorkspacePhilosophy.md  launcher.spec  pyproject.toml  pytest_all.txt  tmp_old_baseline.json
.github/agents/: CLOUD-developer.agent.md  CLOUD-maintenance.agent.md  CLOUD-orchestrator.agent.md  CLOUD-story-writer.agent.md  CLOUD-tester.agent.md  developer.agent.md  maintenance.agent.md  my-agent-copy.agent.md  my-agent.agent.md  orchestrator.agent.md  planner.agent.md  story-writer.agent.md  tester.agent.md
.github/instructions/: copilot-instructions.md
.github/prompts/: plan-fixLegacyValidationErrors.prompt.md  status-report.prompt.md
.github/workflows/: macos-source-test.yml  release.yml  test.yml  (+1 more)
Default-Project/: .gitignore
docs/: SECURITY_AUDIT_REPORT.md  architecture.md  macos-installation-guide.md  project-scope.md
scripts/: README.md  _add_stories_batch.py  _add_wps_batch.py  _repair_csvs.py  _verify.py  add_bug.py  add_test_result.py  add_workpackage.py  archive_test_results.py  build-macos-release.sh  build_windows.py  check_test_impact.py  csv_utils.py  dedup_test_ids.py  finalize_wp.py  generate_manifest.py  install-macos.sh  install_hooks.py  jsonl_utils.py  migrate_csv_to_jsonl.py  release.py  run_tests.py  update_architecture.py  update_bug_status.py  validate_workspace.py  verify_parity.py
tests/: conftest.py  regression-baseline.json  test_ins001_structure.py  test_ins002_packaging.py  test_saf001_security_gate.py
(+1509 files in other folders)
