[build-system]
requires = ["setuptools>=68,<69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-environment-launcher"
version = "3.3.6"
description = "Cross-platform launcher that creates pre-configured, safety-hardened VS Code workspaces."
requires-python = ">=3.11"
dependencies = [
    "customtkinter>=5,<6",
    "Pillow>=10,<12",
]

[project.scripts]
agent-launcher = "launcher.main:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6,<7",
    "pytest>=8,<9",
]

[tool.setuptools.packages.find]
where = ["src"]
